Closed Bug 1315854 Opened 8 years ago Closed 8 years ago

[debug build] Assertion failure: localTransform.IsIdentity(), at gfx/layers/composite/AsyncCompositionManager.cpp:491

Categories

(Core :: Panning and Zooming, defect, P3)

52 Branch
All
Android
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: schien, Assigned: botond)

References

()

Details

(Whiteboard: [gfx-noted])

Attachments

(2 files)

[STR]
simply open https://w3c-test.org/tools/runner/index.html on debug build of Fennec

[EXPECTED RESULT]
web page is loaded and rendered correctly

[ACTUAL RESULT]
Fennec crashed and Assertion failure: localTransform.IsIdentity() showed in logcat
Priority: -- → P3
Hardware: Unspecified → All
Whiteboard: [gfx-noted]
Version: unspecified → 52 Branch
This is the same assertion failure as in bug 1313610 - could be the same underlying issue.

Perhaps this one I can reproduce.
(In reply to Botond Ballo [:botond] from comment #1)
> Perhaps this one I can reproduce.

Yup!
Here's the layer tree that triggers the assertion failure. The layer 0x60899400 is both fixed and has a transform.
(In reply to Botond Ballo [:botond] from comment #3)
> Here's the layer tree that triggers the assertion failure. The layer
> 0x60899400 is both fixed and has a transform.

Actually, it just has a base-transform and a pre-scale that cancel each other out. Due to rounding error, the product of the two isn't exactly the identity, so the assertion is tripped.
Assignee: nobody → botond
Comment on attachment 8811459 [details]
Bug 1315854 - Account for rounding error when checking if certain transforms are the identity in AsyncCompositionManager::AlignFixedAndStickyLayers().

https://reviewboard.mozilla.org/r/93536/#review93614
Attachment #8811459 - Flags: review?(mstange) → review+
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ef895cb3fb7d
Account for rounding error when checking if certain transforms are the identity in AsyncCompositionManager::AlignFixedAndStickyLayers(). r=mstange
https://hg.mozilla.org/mozilla-central/rev/ef895cb3fb7d
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Blocks: 1288210
Comment on attachment 8811459 [details]
Bug 1315854 - Account for rounding error when checking if certain transforms are the identity in AsyncCompositionManager::AlignFixedAndStickyLayers().

Let's get this uplifted to 52, since the regressing bug 1288210 landed on 52.

Approval Request Comment
[Feature/regressing bug #]:
  Bug 1288210

[User impact if declined]:
  In debug builds, an assertion may incorrectly be tripped
  on pages involving fixed-position content, crashing the
  browser. This is particularly likely to happen on Fennec
  during zooming.

[Describe test coverage new/current, TreeHerder]:
  Manual.

[Risks and why]: 
  Very low. The fix only affects debug builds, and reduces
  the scope of the assertion.

[String/UUID change made/needed]:
  None.
Attachment #8811459 - Flags: approval-mozilla-aurora?
Comment on attachment 8811459 [details]
Bug 1315854 - Account for rounding error when checking if certain transforms are the identity in AsyncCompositionManager::AlignFixedAndStickyLayers().

fix recent regression for debug builds in aurora52
Attachment #8811459 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: