Bug 1315854 - Account for rounding error when checking if certain transforms are the identity in AsyncCompositionManager::AlignFixedAndStickyLayers(). r=mstange, a=jcristau

MozReview-Commit-ID: 4xxuqWHedeS

--HG--
extra : rebase_source : ef25581f373fb75ba6997cc16bd53177aecf585b
extra : source : ef895cb3fb7d0b9c0d09e2fd773951e696d69d0f